@@ -4,6 +4,7 @@ Revision history for Dist::Zilla::PluginBundle::Apocalyptic
 
 	Use the ChangeStats::Git plugin for spiffy code statistics :)
 	Migrate to Plugin::Test::ReportPrereqs as it's prettier :)
+	Add my own MintingProfile copied from ETHER, thanks!
 
 0.005	2014-10-28 18:09:23 UTC
 
